# agentic-ai-playground

./: .gitignore  README.md  pyproject.toml
1_foundations/: 1_lab1.ipynb  1_lab1_exercise.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
1_foundations/me/: summary.txt
2_openai_agents_sdk/: 1_lab1.ipynb  2_lab2.ipynb  2_lab2_email_resend.ipynb  3_lab3_guardrails_with_structured_output.ipynb  3_lab3_multi_model_use_with_structured_output.ipynb  4_lab4_WebSearchTool_usage.ipynb  4_lab4_use_od_WebSearchTool.ipynb
3_crewai_agent_framework/engineering_team/: .env.example  .gitignore  README.md  pyproject.toml
3_crewai_agent_framework/engineering_team/src/engineering_team/: crew.py  main.py
3_crewai_agent_framework/engineering_team/src/engineering_team/config/: agents.yaml  tasks.yaml
setup/: setup-mac.md
