[project]
name = "agentic-ai-playground"
version = "0.1.0"
description = "Playground for building and exploring Agentic AI"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "gradio>=5.38.2",
    "openai>=1.68.2",
    "pypdf>=5.9.0",
    "python-dotenv>=1.1.1",
    "tabulate>=0.9.0",
    "ipywidgets>=8.1.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5"
]
