[project]
name = "engineering_team"
version = "0.1.0"
description = "engineering_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "alembic>=1.16.5",
    "black>=25.9.0",
    "crewai[tools]>=0.201.1,<1.0.0",
    "fastapi>=0.118.0",
    "flake8>=7.3.0",
    "gradio>=5.49.0",
    "httpx>=0.28.1",
    "isort>=6.1.0",
    "loguru>=0.7.3",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "openai>=1.109.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scikit-learn>=1.7.2",
    "sqlalchemy>=2.0.43",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
    "uvicorn>=0.37.0",
]

[project.scripts]
engineering_team = "engineering_team.main:run"
run_crew = "engineering_team.main:run"
train = "engineering_team.main:train"
replay = "engineering_team.main:replay"
test = "engineering_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
